# rtWeave

./: .gitignore  CMakeLists.txt  README.md  aabb.h  bvh.h  camera.h  color.h  hdr_texture.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  pdf.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  triangle.h  vec3.h
.github/workflows/: c-cpp.yml
math/: estimate_halfway.cpp  sphere_plot.cpp
output/: 128sampleCB_nopdf.ppm  128sampleCB_uniform_hemispherical_sampling.ppm  1ksamples_alumi.ppm  MT_test1_101696ms.ppm  MT_test2_96595ms.ppm  MT_test3_100504ms.ppm  cornell_box_medres.ppm  custom1.ppm  diffuse0.4.ppm  final_scene_lowres.ppm  glass_diffuse_metalwithfuzz.ppm  hdr_test1.ppm  hdr_test2.ppm  hdr_test3.ppm  icosphere_alu_highres.ppm  image.ppm  metal_reflect1.ppm  perlin_marbled_texture_colorchange.ppm  spheres_with_defocusblur.ppm  texture_checker.ppm  tritest1.ppm  tritest2.ppm  tritest3.ppm  tritest5.ppm  tritest6.ppm  tritest_icoshpere_alu.ppm  tritest_x90.ppm  vfov110_test.ppm  vfov90_test.ppm  volume_isotropic.ppm
output/oneweekend_outputs/: airbubble_in_water_total_internal_reflection.ppm  image5.ppm  image7.ppm  positional_cam_zoomin.ppm  vfov70_test.ppm
output/thenextweek_outputs/: cornell_box_norotation.ppm  final_scene_lowres.ppm  texture_earth_redbg.ppm
output/therestofyourlife_outputs/: 10samples_hittable_light.ppm  10samples_sampling_thelight.ppm  10samples_sampling_thelight_improved.ppm  128sampleCB_imperfectPDF.ppm  1ksamples_mixture_pdf.ppm  (+5 more)
src/: aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable_list.h  interval.h  main.cpp  onb.h  quad.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  triangle.h
